--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             align-items: center;
             font-size: 24px;
             color: black;
-            background: white;
+
         }
         .slide1 {
             background: linear-gradient(to right, #f0f0f0 60%, white 60%);
@@ -33,6 +33,8 @@
             left: 60%;
             top: 40%;
             transform: translate(-50%, -50%);
+            border: 1px solid rgba(0, 0, 0, 0.2); /* Γκρι διαφανές border */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Σκιά */
         }
         .slide2 img, .slide3 img {
             max-width: 40%;
