--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             max-width: 40%;
             max-height: 60%;
             position: absolute;
-            left: 60%;
+            left: calc(60% + 2px);
             top: 40%;
             transform: translate(-50%, -50%);
             border: 1px solid rgba(0, 0, 0, 0.2); /* Γκρι διαφανές border */
@@ -163,7 +163,7 @@
     <div class="swiper horizontal-swiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide slide1">
-                <img src="index.files/logo_square.png" alt="Εικόνα">
+                <img src="index.files/logo_square_better.png" alt="Εικόνα">
             </div>
             <div class="swiper-slide vertical-swiper-container">
                 <div class="swiper vertical-swiper">
