--- a/index.html
+++ b/index.html
@@ -169,6 +169,51 @@
         .language-switcher button.active {
             color: black; /* Ενεργό χρώμα */
         }
+/* Modal Styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    overflow: hidden;
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fff;
+    padding: 20px;
+    width: 80%;
+    max-width: 900px;
+    height: 80%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    overflow: auto; /* Το scroll επιτρέπεται εδώ */
+    pointer-events: auto; /* Εξασφαλίζει ότι το iframe δέχεται αλληλεπίδραση με το ποντίκι */
+}
+
+
+.close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
     </style>
 </head>
 <body>
@@ -223,8 +268,8 @@
     <!-- Footer -->
     <footer>
         <div class="footer-left">
-            <a href="#" id="terms-link">Όροι Χρήσης</a>
-            <a href="#" id="privacy-link">Πολιτική Απορρήτου</a>
+        <a href="terms.html" id="terms-link">Όροι Χρήσης</a>
+        <a href="privacy.html" id="privacy-link">Πολιτική Απορρήτου</a>
             <a href="#" id="design-link">Web Design</a>
         </div>
         <div class="footer-content">
@@ -243,8 +288,23 @@
         </div>
     </footer>
 
+<!-- Modal -->
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <iframe id="modal-iframe" class="modal-iframe" frameborder="0"></iframe>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
+
+// Ενημέρωση του γλωσσικού switcher κατά τη φόρτωση της σελίδας
+window.addEventListener('load', () => {
+    const savedLanguage = localStorage.getItem('language') || 'el';
+    setActiveLanguage(savedLanguage);
+    changeLanguage(savedLanguage); // Ενημέρωση των κειμένων κατά τη φόρτωση
+});
         // Γλωσσικό Switcher
         const grBtn = document.getElementById('gr-btn');
         const enBtn = document.getElementById('en-btn');
@@ -396,7 +456,50 @@
                 }
             });
         }
+// Λειτουργία για το modal
+const modal = document.getElementById('modal');
+const modalIframe = document.getElementById('modal-iframe');
+const closeModal = document.querySelector('.close-modal');
 
+// Συνάρτηση για να ανοίγει το modal με το σωστό αρχείο
+function openModal(file) {
+    const language = localStorage.getItem('language') || 'el'; // Λαμβάνει την επιλεγμένη γλώσσα
+    const filePath = language === 'en' ? `${file}_en.html` : `${file}.html`; // Προσαρμόζει το αρχείο
+    modalIframe.src = filePath;
+    modal.style.display = 'flex'; // Εμφάνιση modal με flex για να το κεντράρει
+}
+
+// Άνοιγμα modal όταν κάνεις κλικ στους συνδέσμους
+document.getElementById('terms-link').addEventListener('click', (e) => {
+    e.preventDefault();
+    openModal('terms'); // Ανοίγει το modal με το σωστό αρχείο
+});
+
+document.getElementById('privacy-link').addEventListener('click', (e) => {
+    e.preventDefault();
+    openModal('privacy'); // Ανοίγει το modal με το σωστό αρχείο
+});
+
+// Κλείσιμο modal όταν κάνεις κλικ στο "x"
+closeModal.addEventListener('click', () => {
+    modal.style.display = 'none';
+    modalIframe.src = ''; // Καθάρισε το iframe
+});
+
+// Κλείσιμο modal όταν κάνεις κλικ έξω από το modal
+window.addEventListener('click', (e) => {
+    if (e.target === modal) {
+        modal.style.display = 'none';
+        modalIframe.src = ''; // Καθάρισε το iframe
+    }
+});
+
+// Ανίχνευση του load event του iframe για να ρυθμίσουμε το scroll
+modalIframe.addEventListener('load', function() {
+    const iframeDoc = modalIframe.contentDocument || modalIframe.contentWindow.document;
+    iframeDoc.body.style.overflow = 'auto'; // Εξασφαλίζει ότι το iframe μπορεί να κάνει scroll
+    iframeDoc.documentElement.style.overflow = 'auto'; // Εξασφαλίζει ότι το iframe μπορεί να κάνει scroll
+});
         // Αρχικοποίηση των μπαρών
         updateHorizontalProgressBar(0);
         updateVerticalProgressBar(0);
