--- a/index.html
+++ b/index.html
@@ -171,16 +171,17 @@
         }
 /* Modal Styles */
 .modal {
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.7); /* Σκοτεινός φόντος για το modal */
-    overflow: hidden; /* Αφαίρεση του scroll από το modal */
+    z-index: 9999;
+    overflow: hidden;
 }
 
 .modal-content {
@@ -197,11 +198,11 @@
 }
 
 .modal-iframe {
-    width: 80%; /* Ρυθμίστε το πλάτος του iframe όπως θέλετε */
-    height: 80%; /* Ρυθμίστε το ύψος του iframe όπως θέλετε */
+    width: 100%;
+    height: 100%;
     border: none;
-    overflow: auto; /* Επιτρέπουμε το scroll στο iframe */
-    pointer-events: auto;
+    overflow: auto; /* Το scroll επιτρέπεται εδώ */
+    pointer-events: auto; /* Εξασφαλίζει ότι το iframe δέχεται αλληλεπίδραση με το ποντίκι */
 }
 
 
