--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     justify-content: center;
     align-items: center;
     z-index: 9999;
-    overflow: hidden;
+    overflow: hidden; /* Αφαίρεση του scroll στο modal */
 }
 
 .modal-content {
@@ -191,7 +191,7 @@
     width: 80%;
     max-width: 900px;
     height: 80%;
-    overflow: hidden;
+    overflow: hidden; /* Κρύβει το scroll στο modal */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -201,10 +201,9 @@
     width: 100%;
     height: 100%;
     border: none;
-    overflow: auto; /* Το scroll επιτρέπεται εδώ */
+    overflow: auto; /* Ενεργοποίηση του scroll μέσα στο iframe */
     pointer-events: auto; /* Εξασφαλίζει ότι το iframe δέχεται αλληλεπίδραση με το ποντίκι */
 }
-
 
 .close-modal {
     position: absolute;
@@ -500,6 +499,7 @@ modalIframe.addEventListener('load', function() {
     iframeDoc.body.style.overflow = 'auto'; // Εξασφαλίζει ότι το iframe μπορεί να κάνει scroll
     iframeDoc.documentElement.style.overflow = 'auto'; // Εξασφαλίζει ότι το iframe μπορεί να κάνει scroll
 });
+
         // Αρχικοποίηση των μπαρών
         updateHorizontalProgressBar(0);
         updateVerticalProgressBar(0);
