--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     justify-content: center;
     align-items: center;
     z-index: 9999;
-    overflow: hidden; /* Αφαίρεση του scroll στο modal */
+    overflow: auto; /* Ενεργοποιεί το scroll για το modal */
 }
 
 .modal-content {
@@ -191,7 +191,7 @@
     width: 80%;
     max-width: 900px;
     height: 80%;
-    overflow: hidden; /* Κρύβει το scroll στο modal */
+    overflow: auto; /* Ενεργοποιεί το scroll μόνο στο modal */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -201,8 +201,8 @@
     width: 100%;
     height: 100%;
     border: none;
-    overflow: auto; /* Ενεργοποίηση του scroll μέσα στο iframe */
-    pointer-events: auto; /* Εξασφαλίζει ότι το iframe δέχεται αλληλεπίδραση με το ποντίκι */
+    overflow: hidden; /* Αφαίρεση του scroll από το iframe */
+    pointer-events: auto;
 }
 
 .close-modal {
@@ -496,8 +496,7 @@ window.addEventListener('click', (e) => {
 // Ανίχνευση του load event του iframe για να ρυθμίσουμε το scroll
 modalIframe.addEventListener('load', function() {
     const iframeDoc = modalIframe.contentDocument || modalIframe.contentWindow.document;
-    iframeDoc.body.style.overflow = 'auto'; // Εξασφαλίζει ότι το iframe μπορεί να κάνει scroll
-    iframeDoc.documentElement.style.overflow = 'auto'; // Εξασφαλίζει ότι το iframe μπορεί να κάνει scroll
+    iframeDoc.body.style.overflow = 'hidden';  // Κατάργηση του scroll στο iframe
 });
 
         // Αρχικοποίηση των μπαρών
